WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
129252
REGRESSION(
r164438
): [GTK] Tests /webkit2/WebKitWebView/tls-errors-policy and /webkit2/WebKitWebContext/uri-scheme fail
https://bugs.webkit.org/show_bug.cgi?id=129252
Summary
REGRESSION(r164438): [GTK] Tests /webkit2/WebKitWebView/tls-errors-policy and...
Carlos Garcia Campos
Reported
2014-02-24 02:14:58 PST
/webkit2/WebKitWebContext/uri-scheme: ** ERROR:../../Tools/TestWebKitAPI/Tests/WebKit2Gtk/TestWebKitWebContext.cpp:225:void testWebContextURIScheme(URISchemeTest*, gconstpointer): assertion failed (test->m_error.get() == (test, 10)): Error message. (test, 399) /webkit2/WebKitWebView/tls-errors-policy: ** ERROR:../../Tools/TestWebKitAPI/Tests/WebKit2Gtk/TestSSL.cpp:45:virtual void SSLTest::provisionalLoadFailed(const gchar*, GError*): assertion failed (error == (soup_http_error_quark, 6)): Unacceptable TLS certificate (soup_http_error_quark, 399) This is because we are assuming all error codes come from WebCore. I think in the case of errors we should not use the conversion functions or at least we should not assert in default: and return the passed in error code instead of falling back to network error.
Attachments
Patch
(1.95 KB, patch)
2014-02-24 05:50 PST
,
Enrique Ocaña
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Enrique Ocaña
Comment 1
2014-02-24 05:50:54 PST
Created
attachment 225056
[details]
Patch
WebKit Commit Bot
Comment 2
2014-02-24 05:53:18 PST
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
http://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
Enrique Ocaña
Comment 3
2014-02-24 07:06:08 PST
The root cause of this bug is related to the root cause of #129256, but this time in WK2.
WebKit Commit Bot
Comment 4
2014-02-24 11:37:54 PST
Comment on
attachment 225056
[details]
Patch Clearing flags on attachment: 225056 Committed
r164597
: <
http://trac.webkit.org/changeset/164597
>
WebKit Commit Bot
Comment 5
2014-02-24 11:37:57 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug