REGRESSION(r164438): [GTK] Tests /webkit2/WebKitWebView/tls-errors-policy and /webkit2/WebKitWebContext/uri-scheme fail https://bugs.webkit.org/show_bug.cgi?id=129252

Patch by Enrique Ocaña González <eocanha@igalia.com> on 2014-02-24
Reviewed by Carlos Garcia Campos.

* UIProcess/API/gtk/WebKitPrivate.cpp: Manage error values generated by the user application and not present in WebCore
(toWebKitError):
(toWebCoreError):

Canonical link: https://commits.webkit.org/147305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@164597 268f45cc-cd09-0410-ab3c-d52691b4dbfc